--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="io.github.jackdevlab.resultlauncher.sample">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ResultLauncher"
         tools:targetApi="31">
+        <activity
+            android:name=".ResultTestActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
